release: synchronize FE Monster 1.8.8 (07/17)
Synchronize the tested v1.8.8 source tree through GitHub signed commits because the local Git smart-HTTP route is unavailable.